--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,28 @@ body {
     background-color: #F6F8FC;
 }
 
+#header-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 100%;
+    height: auto;
+    background-color: hsla(214, 86%, 72%, 0.164);
+    padding: 12px 72px;
+
+    & a {
+        color: black;
+        text-decoration: none;
+    }
+}
+
 input[type="checkbox"],
 select,
 button, 
 i {
     cursor: pointer;
-}
-
-#title {
-    margin-top: 16px;
 }
 
 button {
@@ -35,10 +48,6 @@ button {
     &:active {
         background-color: white;
     }
-}
-
-h1 {
-    text-align: center;
 }
 
 #general-container {
@@ -246,7 +255,6 @@ h1 {
     width: 90%;
     margin: 12px;
     padding: 12px;
-    border: 1px solid red;
 
     & input {
         width: 60%;
@@ -439,9 +447,13 @@ input[type="search"]::-webkit-search-cancel-button {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    
     width: 90%;
+    margin-bottom: 8px;
 
     & button {
+        font-weight: bold;
+        border: none;
         margin-left: -16px;
     }
 }
@@ -494,7 +506,15 @@ input[type="search"]::-webkit-search-cancel-button {
     border: 1px solid lightgray;
     border-radius: 6px;
     padding: 28px;
-    margin-top: 32px;
+
+    & h2 {
+        color: tomato;
+    }
+
+    & p {
+        font-weight: bold;
+        color: black;
+    }
 }
 
 /* Task List */
@@ -626,5 +646,137 @@ input[type="search"]::-webkit-search-cancel-button {
     border-radius: 6px;
     padding: 8px;
     margin-top: 12px;
+}
+
+#not-found-message-h4 {
+    color: #222;
+}
+
+#show-tasks-again {
+    color: black;
+
+    &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+    }
+}
+
+/*Footer*/
+footer {
+    position: flex;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+
+    border-top: 1px solid lightgray;
+
+    & p {
+        font-size: 16px;
+        margin-bottom: 0px;
+    }
+}
+
+#info-container {
+    background-color: #20252C;
+    color: hsl(0, 0%, 98%);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+}
+
+#foot-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    
+    padding: 20px;
+}
+
+#techs {
+    display: flex;
+    align-items: center;
+}
+
+.tech-list {
+    list-style: none;
+    display: flex;
+    padding: 0;
+    margin: 0;
+    margin-left: 16px;
+}
+
+.tech-list li {
+    margin-right: 16px;
+}
+.tech-logo {
+    width: 30px;
+    height: auto;
+}
+
+#api {
+    display: flex;
+    align-items: center;
+} 
+
+#api p {
+    margin: 0;
+}
+
+#api a {
+    margin-left: 5px;
+    color: hsl(210, 100%, 70%);
+    text-decoration: none;
+}
+
+#api a:hover {
+    text-decoration: underline;
+    color: hsl(210, 100%, 46%);
+
+}
+
+#links {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-size: 26px;
+    padding: 20px;
+}
+
+#links .bi {
+    position: relative;
+    top: 0; 
+    color: hsl(0, 0%, 98%);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    margin-right: 32px;
+    transition: top 0.3s ease, box-shadow 0.3s ease;
+}
+
+#links .bi:hover {
+    color: #50C878; 
+    top: -3px;
+    transform: scale(1.6);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
+}
+
+#copy {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    color: #555;
+    background-color: black;
+    padding: 12px 62px;
+
+    & a {
+        font-size: 18px;
+        color: #777;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+        text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
