--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 
     font-family: "Reddit Sans", sans-serif;
     font-size: 16px;
-    background-color: #F6F8FC;
+    background-color: white;
 }
 
 #header-container {
@@ -18,6 +18,8 @@ body {
     width: 100%;
     height: auto;
     background-color: hsla(214, 86%, 72%, 0.164);
+    box-shadow: 0px 0px 0px 2px hsla(214, 86%, 42%, 0.164);
+
     padding: 12px 72px;
 
     & a {
@@ -58,6 +60,7 @@ button {
 
     width: 70%;
     border: 2px solid lightgray;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 6px;
     margin: 20px auto;
     padding: 20px 12px;
@@ -257,8 +260,8 @@ button {
     padding: 12px;
 
     & input {
-        width: 60%;
-        height: 40px;
+        width: 68%;
+        height: 42px;
         background-color: #EAF1FB;
         border: 1px solid lightgray;
         border-radius: 4px;
@@ -295,7 +298,7 @@ button {
 
     #search-button {
         width: 52px;
-        height: 40px;
+        height: 42px;
         background-color: #EAF1FB;
         border: 1px solid lightgray;
         border-radius: 0px 30px 30px 0px;
@@ -678,9 +681,10 @@ footer {
 }
 
 #info-container {
-    background-color: #20252C;
-    color: hsl(0, 0%, 98%);
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    background-color: hsla(214, 86%, 72%, 0.164);
+    box-shadow: 0px -2px 0px hsla(214, 86%, 42%, 0.164);
+    color: #222;
+    font-weight: bold;
 }
 
 #foot-container {
@@ -712,27 +716,6 @@ footer {
     height: auto;
 }
 
-#api {
-    display: flex;
-    align-items: center;
-} 
-
-#api p {
-    margin: 0;
-}
-
-#api a {
-    margin-left: 5px;
-    color: hsl(210, 100%, 70%);
-    text-decoration: none;
-}
-
-#api a:hover {
-    text-decoration: underline;
-    color: hsl(210, 100%, 46%);
-
-}
-
 #links {
     display: flex;
     flex-direction: row;
@@ -745,23 +728,21 @@ footer {
 #links .bi {
     position: relative;
     top: 0; 
-    color: hsl(0, 0%, 98%);
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    color: #222;
     margin-right: 32px;
     transition: top 0.3s ease, box-shadow 0.3s ease;
 }
 
 #links .bi:hover {
-    color: #50C878; 
+    color: hsl(224, 66%, 27%); 
     top: -3px;
     transform: scale(1.6);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
 }
 
 #copy {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 
     color: #555;
