--- a/css/style.css
+++ b/css/style.css
@@ -52,13 +52,17 @@ button {
     }
 }
 
+#title {
+    margin-bottom: 0px;
+}
+
 #general-container {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
     justify-content: center;
 
-    width: 70%;
+    width: 76%;
     border: 2px solid lightgray;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 6px;
@@ -119,10 +123,9 @@ button {
     align-items: center;
     justify-content: space-between;
 
-    width: 86%;
+    width: 90%;
     padding: 8px;
     margin: 8px;
-    margin-right: 40px;
 
     & input,
     & select {
@@ -195,7 +198,6 @@ button {
     margin-left: 24px;
 }
 
-
 #buttons-box {
     display: flex;
     flex-direction: row;
@@ -258,7 +260,7 @@ button {
     padding: 12px;
 
     & input {
-        width: 68%;
+        width: 90%;
         height: 42px;
         background-color: #EAF1FB;
         border: 1px solid lightgray;
@@ -267,7 +269,7 @@ button {
         border-bottom-left-radius: 30px;
         margin-left: 8px;
         margin-right: 8px;
-        padding-left: 20px;
+        padding-left: 24px;
     
         &:focus {
             outline: none !important;
@@ -529,32 +531,31 @@ input[type="search"]::-webkit-search-cancel-button {
 
 /* Task List */
 #task-list-results-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
     width: 90%;
     overflow: hidden;
-    border-radius: 0px 0px 6px 6px;
     margin-top: 12px;
     padding: 0px;
 }
 
 .tasksDiv {
     display: flex;
-    flex-direction: row; 
+    flex-flow: row wrap;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
 
-    position: relative; 
-    width: 52rem;
-    overflow: hidden;
+    width: 100%;
     font-size: 17px;
     border-bottom: 1px solid #d3d3d3;
     background-color: #F2F6FC; 
-    border-radius: 6px;
-    padding: 0px 8px;
+    padding: 0px 8px 0px 0px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+
+    &:hover {
+        transform: translateY(-2px);
+        border-top: 1px solid lightgray;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); 
+    }
 
     & .task-checkbox {
         scale: 1.2;
@@ -563,24 +564,21 @@ input[type="search"]::-webkit-search-cancel-button {
     }
 
     & .task {
-        width: 40rem;
+        min-width: 500px;
+        max-width: 6%;
         line-height: 24px;
         padding: 8px;
         margin-bottom: 0px;
-    }    
-}
+        overflow: hidden;
+    }
 
-.tasksDiv:hover {
-    transform: translateY(-2px);
-    border-top: 1px solid lightgray;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); 
-}
-
-.p-task {
-    flex-grow: 1;
-    background-color: #F2F6FC;
-    cursor: pointer;
-    transition: transform 0.3s ease;
+    & .button-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+    }
 }
 
 .show-description-button {
@@ -589,8 +587,8 @@ input[type="search"]::-webkit-search-cancel-button {
     border: none;
     font-size: 16px;
     font-weight: bold;
+    margin-left: 42px;
     padding: 0px;
-    margin-left: 56px;
     transition: all 0.3s;
 
     &:hover {
@@ -600,12 +598,12 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 #description-container {
-    width: 32rem;
+    min-width: 501px;
+    max-width: 6%;
     background-color: white;
     border: 1px solid lightgray;
     border-radius: 6px;
-    margin: 8px;
-    margin-left: 42px;
+    margin: 8px 0px;
     padding: 16px;
     color: #333;
     font-size: 15px;
@@ -613,19 +611,6 @@ input[type="search"]::-webkit-search-cancel-button {
     max-height: 10rem;
     white-space: pre-wrap;
     word-wrap: break-word;
-}
-
-.button-container {
-    flex-shrink: 0; 
-}
-
-.edit-button,
-.delete-button {
-    margin: 2px;
-    margin-right: 6px;
-    margin-top: 6px;
-    margin-bottom: 6px;
-    padding: 5px 10px;
 }
 
 .edit-button .bi-pencil-square {
