--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ button {
 
 #task-name-container input:focus {
     outline: none !important;
-    border: 2px solid rgb(121, 121, 121);
+    border: 1px solid rgb(121, 121, 121);
     box-shadow: 0 0 1px rgb(58, 58, 58);
 }
 
@@ -136,7 +136,7 @@ button {
 #quick-inputs-container input:focus,
 #quick-inputs-container select:focus {
     outline: none !important;
-    border: 2px solid lightgray;
+    border: 1px solid lightgray;
     box-shadow: 0 0 2px lightgray;
 }
 
@@ -183,7 +183,7 @@ button {
 
 #task-description-container textarea:focus {
     outline: none !important;
-    border: 2px solid rgb(121, 121, 121);
+    border: 1px solid rgb(121, 121, 121);
     box-shadow: 0 0 1px rgb(58, 58, 58);
 }
 
@@ -284,7 +284,7 @@ button {
         
         &:focus {
             outline: none !important;
-            border: 2px solid hsl(0, 0%, 83%);
+            border: 1px solid hsl(0, 0%, 83%);
             box-shadow: 0 0 2px lightgray;
         }
     }
@@ -598,7 +598,7 @@ input[type="search"]::-webkit-search-cancel-button {
     background-color: white;
     border: 1px solid lightgray;
     border-radius: 6px;
-    margin: 8px 0px;
+    margin: 8px 8px 8px 16px;
     padding: 16px;
     color: #333;
     font-size: 15px;
@@ -657,13 +657,15 @@ input[type="search"]::-webkit-search-cancel-button {
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
-
+    align-items: center;
+    width: 100%;
     font-size: 1em;
     background-color: hsla(32, 100%, 71%, 0.637);
     color: black;
     border: 1px solid darkorange;
     box-shadow: 0 4px 8px rgba(255, 165, 0, 0.5);
     padding: 26px 56px;
+    overflow: hidden;
 
     & input,
     select,
@@ -675,7 +677,7 @@ input[type="search"]::-webkit-search-cancel-button {
     
         &:focus {
             outline: none !important;
-                border: 2px solid darkorange;
+                border: 1px solid darkorange;
                 box-shadow: 0 0 1px darkorange;
         }
     }
@@ -683,30 +685,40 @@ input[type="search"]::-webkit-search-cancel-button {
 
 #task-name-edit-container,
 #quick-inputs-edit-container,
-#task-description-edit-container,
-#buttons-edit-box {
-    width: 100%;
+#task-description-edit-container {
+    width: 90%;
     padding: 8px;
     margin: 8px;
     overflow: hidden;
 }
 
+#edit-task-finish-date {
+    padding-right: 8px;
+}
+
 #task-name-edit-container input {
-    width: 86%;
-    height: 38px;
+    width: 80%;
+    height: 40px;
+    margin-left: 8px;
+    padding-left: 12px;
 }
 
 #quick-inputs-edit-container {
     display: flex;
-    flex-flow: row wrap;
+    flex-direction: wrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
 
     & select,
     input {
-        height: 38px;
-        margin-right: 7px;
+        height: 40px;
+        padding-left: 6px;
     }
+}
+
+#quick-inputs-edit-container select {
+    margin-left: 8px;
+    margin-right: 18px;
 }
 
 #task-description-edit-container {
@@ -735,11 +747,11 @@ input[type="search"]::-webkit-search-cancel-button {
 
 #buttons-edit-box {
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
     justify-content: center;
     align-items: center;
-
-    gap: 32px;
+    width: 100%;
+    gap: 46px;
 
     & button {
         width: 140px;
