--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ button {
 #quick-inputs-container input:focus,
 #quick-inputs-container select:focus {
     outline: none !important;
-    border: 1px solid lightgray;
+    border: 1px solid rgb(121, 121, 121);
     box-shadow: 0 0 2px lightgray;
 }
 
@@ -176,9 +176,10 @@ button {
     min-height: 120px;
     border: 1px solid lightgray;
     border-radius: 6px;
-    overflow: hidden;
     padding: 18px 24px;
     margin-top: 12px;
+    overflow-y: scroll;
+    resize: none;
 }
 
 #task-description-container textarea:focus {
@@ -267,6 +268,7 @@ button {
         &:focus {
             outline: none !important;
             background-color: white;
+            border: 1px solid rgb(121, 121, 121);
         }    
     }
 
@@ -305,6 +307,10 @@ button {
 
         &:active {
             background-color: white;
+        }
+
+        &:focus {
+            border: 1px solid rgb(121, 121, 121);
         }
     }
 
@@ -436,6 +442,11 @@ input[type="search"]::-webkit-search-cancel-button {
 .dropdown-menu {
     max-height: 240px;
     overflow-y: auto;
+
+    & li:hover {
+        background-color: #e6ebf1;
+        cursor: pointer;
+    }
 }
 
 .bi-arrow-clockwise {
@@ -543,7 +554,6 @@ input[type="search"]::-webkit-search-cancel-button {
     border-bottom: 1px solid #d3d3d3;
     background-color: #F2F6FC;
     padding: 0px 8px 0px 0px;
-    cursor: pointer;
     transition: transform 0.3s ease;
 
     &:hover {
@@ -845,13 +855,13 @@ footer {
     justify-content: center;
     font-size: 26px;
     padding: 20px;
+    gap: 32px;
 }
 
 #links .bi {
     position: relative;
     top: 0; 
     color: #222;
-    margin-right: 32px;
     transition: top 0.3s ease, box-shadow 0.3s ease;
 }
 
