Edit textarea added scroll

--- a/css/style.css
+++ b/css/style.css
@@ -739,14 +739,15 @@ input[type="search"]::-webkit-search-cancel-button {
     & #edit-task-description {
         width: 98%;
         max-width: 98%;
-        height: 80px;
+        height: 120px;
         max-height: 377px;
         min-height: 100px;
         padding: 18px 24px;
         margin: 8px;
         margin-left: 0px;
         margin-top: 16px;
-        overflow: hidden;
+        overflow-y: scroll;
+        resize: none;
     }
 
     & .edit-task-description {
